# crosswordsmith

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  arrange.pl  clues.pl  crossword.pl  crosswordsmith  export.pl  fill.pl  lint.pl  load.pl  quality.pl  run_tests.sh  scratch_page.html  stockgrid.pl
benchmarks/: analyze_layout.py  arrange_identity.sha256  baseline.json  bench_cli.pl  bench_core.pl  bench_exact.pl  bench_fixture.pl  bench_paths.pl  bench_process.pl  bench_report.pl  bench_store.pl  check_arrange_identity.sh  check_baseline.pl  check_fill_baseline.pl  check_fill_identity.sh  check_fill_identity_artifact.sh  check_greedy_baseline.pl  check_greedy_identity.sh  fill_baseline.json  fill_history.jsonl  fill_identity.sha256  fixtures.pl  (+23 more)
xword/: pyproject.toml
xword/src/xword/: __init__.py  board.py  cli.py  convert.py  detect.py  diff.py  stats.py  util.py
xword/src/xword/formats/: __init__.py  exolve.py  ipuz.py  native.py
xword/src/xword/render/: __init__.py  geometry.py  html.py  raster.py  svg.py  terminal.py
xword/tests/: conftest.py  test_board.py  test_cli.py  test_convert.py  test_detect.py  test_diff.py  test_formats.py  test_render.py  test_stats.py  test_view.py
xword/tests/fixtures/: bundled_17.ipuz.json  sample.ipuz.json  sample_decorated.exolve  sample_rebus.exolve  sample_shaded.ipuz.json
xword/tests/golden/: convert_bundled_17_no_feature.exolve  convert_bundled_17_no_feature.ipuz.json  render_bundled_17_blank.html  render_bundled_17_solved.html  view_bundled_17_blank.txt  view_bundled_17_solved.txt
(+591 files in other folders)
