[project]
name = "xword"
version = "0.1.0"
description = "Viewer, format, rendering, and analysis multitool for crossword layouts"
requires-python = ">=3.11"
dependencies = ["cyclopts>=4.20", "rich>=13"]

[project.optional-dependencies]
raster = ["cairosvg>=2.9"]  # Phase 3; runtime prereq: system cairo (apt install libcairo2)

[project.scripts]
xword = "xword.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xword"]

[dependency-groups]
dev = ["pytest>=8"]
